...
    "common.today": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Today"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Hôm nay"
...
    "profile.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profile"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Cá nhân"
...
    "tab.kicks": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Kicks"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Cử động"
...
